--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
+
+    <com.kakao.usermgmt.LoginButton
+        android:id="@+id/btn_kakao_login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Login">
+        android:layout_marginHorizontal="30dp"
+        android:layout_above="@id/btn_layout"/>
 
-    </Button>
-
-    <Button
-        android:id="@+id/btn_nfc_read"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/btn_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="80dp"
-        android:text="Read">
-    </Button>
+        android:layout_centerInParent="true"
+        android:layout_marginHorizontal="20dp">
 
-    <Button
-        android:id="@+id/btn_nfc_write"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="80dp"
-        android:text="Write">
-    </Button>
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:text="Sign up"
+            android:layout_margin="10dp"
+            android:layout_centerVertical="true" />
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:text="Log in"
+
+            android:layout_marginEnd="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
