--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -3,18 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/bg_lobby">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerHorizontal="true"
+        android:translationY="175dp">
 
         <ImageView
             android:id="@+id/img_login_user_info"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_centerHorizontal="true">
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerVertical="true">
 
         </ImageView>
 
@@ -22,10 +24,10 @@
             android:id="@+id/txt_login_user_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/img_login_user_info"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/img_login_user_info"
             android:text="login_user_info"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
 
     </RelativeLayout>
 
