--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -12,6 +12,7 @@
         android:layout_centerHorizontal="true"
         android:translationY="175dp">
 
+
         <ImageView
             android:id="@+id/img_login_user_info"
             android:layout_width="150dp"
@@ -44,5 +45,13 @@
         android:clickable="true"
         android:focusable="true"
         android:src = "@drawable/ic_baseline_map_24"/>
+
+    <Button
+        android:id="@+id/btn_logout_on_lobby"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="30dp"
+        android:text="Log out" />
 
 </RelativeLayout>
