--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Switch
+        android:id="@+id/sb_active"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="30dp"
+        android:switchMinWidth="60dp"
+        android:checked="true"
+        android:textOff="OFF"
+        android:textOn="ON"
+        tools:ignore="UseSwitchCompatOrMaterialXml"/>
+
     <RelativeLayout
         android:id="@+id/mapView"
         android:layout_width="match_parent"
