--- a/app/src/main/res/layout/dialog_signup.xml
+++ b/app/src/main/res/layout/dialog_signup.xml
@@ -11,22 +11,26 @@
         android:id="@+id/nameEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginHorizontal="20dp"
         android:hint="@string/enter_name" />
 
     <EditText
         android:id="@+id/emailEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_below="@id/nameEdit"
-        android:hint="@string/enter_email" />
+        android:hint="@string/enter_email"/>
 
     <EditText
         android:id="@+id/passwordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_below="@id/emailEdit"
         android:hint="@string/enter_password"
         android:inputType="textPassword" />
@@ -35,8 +39,11 @@
         android:id="@+id/signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="30dp"
         android:layout_below="@id/passwordEdit"
-        android:text="@string/sign_up" />
+        android:text="Sign Up" />
+
 
 </RelativeLayout>
