--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -4,58 +4,123 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_result"
     tools:context=".ResultActivity">
+
+    <net.daum.mf.map.api.MapView
+        android:id="@+id/resultMapView"
+        android:layout_width="350dp"
+        android:layout_height="300dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/login_user_result"
+        android:layout_marginBottom="20dp">
+
+    </net.daum.mf.map.api.MapView>
 
     <RelativeLayout
         android:id="@+id/login_user_result"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:translationY="175dp">
-
-        <ImageView
-            android:id="@+id/img_login_user_result"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_centerVertical="true">
-
-        </ImageView>
+        android:layout_height="100dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_above="@id/connect_user_result"
+        android:background="@drawable/shape_roundrect_pink">
 
         <TextView
-            android:id="@+id/txt_login_user_result"
+            android:id="@+id/txt_login_user_score_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/img_login_user_result"
-            android:text="login_user_result"
-            android:textSize="20dp" />
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:text="Score"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+
+        <RelativeLayout
+            android:id="@+id/txt_login_user_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true">
+
+            <TextView
+                android:id="@+id/txt_login_user_name_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="5dp"
+                android:text="Name : login_user_name"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txt_login_user_distance_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txt_login_user_name_result"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="5dp"
+                android:text="Distance : login_user_distance"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/connect_user_result"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_user_result"
-        android:layout_centerHorizontal="true"
-        android:translationY="175dp">
-
-        <ImageView
-            android:id="@+id/img_connect_user_result"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_centerVertical="true">
-
-        </ImageView>
+        android:layout_height="100dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/shape_roundrect_pink">
 
         <TextView
-            android:id="@+id/txt_connect_user_result"
+            android:id="@+id/txt_connect_user_score_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/img_connect_user_result"
-            android:text="connect_user_result"
-            android:textSize="20dp" />
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:text="Score"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+
+        <RelativeLayout
+            android:id="@+id/txt_connect_user_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true">
+
+            <TextView
+                android:id="@+id/txt_connect_user_name_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="5dp"
+                android:text="Name : connect_user_name"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txt_connect_user_distance_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txt_connect_user_name_result"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="5dp"
+                android:text="Distance : connect_user_distance"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
