--- a/app/src/main/res/layout/dialog_accept.xml
+++ b/app/src/main/res/layout/dialog_accept.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="OOO님께 \n우리 지금 만나자를 요청하시겠습니까?"
+        android:text="OOO님이 \n우리 지금 만나자고 하였습니다. \n수락하시겠습니까?"
         android:textSize="20dp"/>
 
 
@@ -22,13 +22,23 @@
         android:layout_below="@id/txt_ask"
         android:layout_centerHorizontal="true">
         <Button
-            android:id="@+id/btn_request"
-            android:layout_width="150dp"
+            android:id="@+id/btn_yes"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="30dp"
-            android:text="Request" />
+            android:text="Yes" />
+
+        <Button
+            android:id="@+id/btn_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="30dp"
+            android:layout_toRightOf="@id/btn_yes"
+            android:text="No" />
 
     </RelativeLayout>
 
