--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg_result"
     tools:context=".ResultActivity">
 
-    <net.daum.mf.map.api.MapView
+    <RelativeLayout
         android:id="@+id/resultMapView"
         android:layout_width="350dp"
         android:layout_height="300dp"
@@ -15,7 +15,7 @@
         android:layout_above="@id/login_user_result"
         android:layout_marginBottom="20dp">
 
-    </net.daum.mf.map.api.MapView>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/login_user_result"
