--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,12 +9,12 @@
 
     <RelativeLayout
         android:id="@+id/resultMapView"
-        android:layout_width="350dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/login_user_result"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp">
-
     </RelativeLayout>
 
     <RelativeLayout
